# cpu_dgemm

./: CMakeLists.txt  README.md
.cache/clangd/index/: config.h.5223764EDDECE959.idx  kernel_int_8x4.c.4D7FD9A0656308C1.idx  kernels.c.424E9A27A877EBD5.idx  kernels.h.E6FD75E35A2B01D0.idx  main.c.9D049C63B204B085.idx  my_dgemm.c.CB1969F92249A354.idx  my_dgemm.h.48417D843398653F.idx  ref_dgemm.c.1D10276C3E9A1B74.idx  ref_dgemm.h.D5D61C85A8E2F27F.idx  utils.c.B531F7A7ED8E6FF9.idx  utils.h.68ECB8DA8CC4F348.idx
include/: config.h  kernels.h  my_dgemm.h  utils.h
src/: kernels.c  main.c  my_dgemm.c  utils.c
